# acp-desktop

./: .gitignore  SPEC.md  create_icon.ps1  fix_dup.py  fix_duplicate.py  fix_restore.py  fix_retry2.py  index.html  package-lock.json  package.json  vite.config.ts
.claude/plans/: findings.md  progress.md  task_plan.md
docs/: context-compression-strategy.md
git_shell/: README.md  clear-commit.ps1  clear-remote-branch.ps1  clear-remote-repo.ps1  clear-tag.ps1  create-github-repo.ps1  git-config-helper.ps1  git-quick-status.ps1  git-remote-helper.ps1  git-script-profile.ps1  init-git-env.ps1  pull-github.ps1  push-github.ps1  set-git-account.ps1  set-git-remote.ps1
git_shell_linux/: README.md  clear-commit.sh  clear-remote-branch.sh  clear-remote-repo.sh  clear-tag.sh  create-github-repo.sh  get-script-profile.sh  git-config-helper.sh  git-quick-status.sh  git-script-profile.sh  init-git-env.sh  pull-github.sh  push-github.sh  set-git-account.sh  set-git-remote.sh
scripts/: import_templates.js  launch_agents.ps1  start_cc_agents.bat
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agents.rs  claude.rs  conversations.rs  messages.rs  mod.rs  system.rs
src-tauri/src/models/: agent.rs  conversation.rs  message.rs  mod.rs
src-tauri/src/services/: agent_manager.rs  claude_cli.rs  claude_cli.rs.bak  db.rs  llm_driver.rs  message_router.rs  mod.rs
src/stores/: agentStore.ts  chatStore.ts  conversationStore.ts  index.ts  uiStore.ts  (+1 more)
templates/: agents.json
(+19 files in other folders)
