[package]
name = "acp-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "acp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
